fix: change text shadow on description song card's block for more readability

--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -7,6 +7,6 @@
     size: 1.2rem;
   }
 
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
