--- a/src/components/SongCard/SongCard.scss
+++ b/src/components/SongCard/SongCard.scss
@@ -13,7 +13,7 @@
     background-size: cover;
 
     border-radius: 10px;
-    text-shadow: 0px 0px 10px black;
+    text-shadow: 1px 1px 2px black; // text-shadow: 0px 0px 10px black;
   }
 
   &__blur-wrapper {
@@ -75,7 +75,7 @@
       size: 2rem;
     }
 
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 5px;
   }
 
@@ -88,7 +88,7 @@
       size: 1.6rem;
     }
 
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
     border-radius: 5px;
   }
 
@@ -119,7 +119,7 @@
         size: 1.4rem;
       }
   
-      background-color: rgba(0, 0, 0, 0.1);
+      background-color: rgba(0, 0, 0, 0.2);
       border-radius: 5px;
     }
 
