--- a/src/components/SongCard/SongCardNoData/SongCardNoData.scss
+++ b/src/components/SongCard/SongCardNoData/SongCardNoData.scss
@@ -1,5 +1,6 @@
 .song-card {
   &__no-data-message {
-    font-size: 1.2rem;
+    text-shadow: 0px 0px 0px black;
+    font-size: 1.4rem;
   }
 }
